# ai_papers_searcher

./: .gitignore  Dockerfile  Makefile  README.md  abstracts_to_dict.py  app.yaml  copy_model_data.sh  main.py  paperinfo.py  pyproject.toml  start_here.sh  timer.py
.github/workflows/: lighthouse-badger-easy.yml
lighthouse_results/desktop/: georgegca_pythonanywhere_com_.html  georgegca_pythonanywhere_com__keywords_vqa.html
lighthouse_results/mobile/: georgegca_pythonanywhere_com_.html  georgegca_pythonanywhere_com__keywords_vqa.html
model/: paper_finder.py
static/: style.css
templates/: base.html  header.html  index.html  result.html  similar.html
